--- a/Flutter3ImperativeApply/pubspec.yaml
+++ b/Flutter3ImperativeApply/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
 
+  firebase_core: ^2.25.4
+  firebase_analytics: ^10.8.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
